--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ clipboard-win = "4.5.0"
 reqwest = { version = "0.11", features = ["blocking", "json"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+simulate = "0.3.0"
